<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/header"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/SubHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/subheading3"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/addressField"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="start|center_horizontal"
            android:hint="@string/addressInput"
            android:paddingStart="20dp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/main"
            android:text="@string/show"
            android:textColor="#3C3C3C"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/subHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/LatView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:background="@color/lightMain"
            android:text=""
            android:textSize="18sp" />

        <TextView
            android:id="@+id/subHeading2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/LongView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/lightMain"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/subHeading3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/subheading4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:backgroundTint="@color/main"
        android:text="@string/edit"
        android:textColor="#3C3C3C"
        android:textSize="18sp" />
</LinearLayout>